llvm/test/loops.llvm.bc.err
/Users/cmk/llvm/bin/llvm-as: llvm/test/loops.llvm:13:12: error: expected instruction opcode
  ret void zeroinitializer
           ^
